--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/H-Plus-Time/ShapeDetection-polyfill#readme",
   "dependencies": {
-    "tracking": "^1.1.3"
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
+    "jsfeat": "^0.0.8"
+  },
+  "devDependencies": {
+    "dat.gui": "^0.6.1"
   }
 }
